import javax.swing.ImageIcon;
import java.util.ArrayList;
// import java.awt.Color;
// -------------------------------------------------------------------------
/**
 * Represents a Queen game piece.
 *
 * @author Ben Katz (bakatz)
 * @author Myles David II (davidmm2)
 * @author Danielle Bushrow (dbushrow)
 * @version 2010.11.17
 */
public class Queen extends ChessGamePiece{
	// ----------------------------------------------------------
	/**
	 * Create a new Queen object.
	 *
	 * @param board
	 *			the board the queen is on
	 * @param row
	 *			the row location of the queen
	 * @param col
	 *			the column location of the queen
	 * @param color
	 *			either GamePiece.WHITE, BLACK, or UNASSIGNED
	 */
	public Queen( ChessGameBoard board, int row, int col, int color ){
		super( board, row, col, color );
	}
	/**
	 * Calculates the possible moves for this Queen.
	 * @param board the board to check on
	 * @return ArrayList<String> the list of moves
	 */
	@Override
	protected ArrayList<String> calculatePossibleMoves( ChessGameBoard board ){
		ArrayList<String> northEastMoves = calculateNorthEastMoves( board, 8 );
		ArrayList<String> northWestMoves = calculateNorthWestMoves( board, 8 );
		ArrayList<String> southEastMoves = calculateSouthEastMoves( board, 8 );
		ArrayList<String> southWestMoves = calculateSouthWestMoves( board, 8 );
		ArrayList<String> northMoves = calculateNorthMoves( board, 8 );
		ArrayList<String> southMoves = calculateSouthMoves( board, 8 );
		ArrayList<String> eastMoves = calculateEastMoves( board, 8 );
		ArrayList<String> westMoves = calculateWestMoves( board, 8 );
		ArrayList<String> allMoves = new ArrayList<String>();
		allMoves.addAll( northEastMoves );
		allMoves.addAll( northWestMoves );
		allMoves.addAll( southWestMoves );
		allMoves.addAll( southEastMoves );
		allMoves.addAll( northMoves );
		allMoves.addAll( southMoves );
		allMoves.addAll( westMoves );
		allMoves.addAll( eastMoves );
		return allMoves;
	}
}
